[package]
name = "rustyleaf-core"
version = "0.0.1"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "HtmlCanvasElement",
  "WebGl2RenderingContext",
  "WebGlProgram",
  "WebGlShader",
  "WebGlBuffer",
  "WebGlTexture",
  "WebGlUniformLocation",
  "WebGlVertexArrayObject",
  "ImageData",
  "HtmlImageElement",
  "EventTarget",
  "MouseEvent",
  "WheelEvent",
  "KeyboardEvent",
  "console",
  "Performance",
  "Request",
  "Response",
  "RequestInit",
  "RequestMode",
  "Headers",
  "ResponseInit",
  "XmlHttpRequest",
  "XmlHttpRequestResponseType"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
rstar = "0.11"  # For spatial indexing and hit-testing
geojson = "0.24"  # For GeoJSON parsing
geo-types = "0.7"  # For geometry types
regex = "1.0"  # For pattern matching in streaming GeoJSON parser
lyon_tessellation = "1.0"
lyon_path = "1.0"
